// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SteamWidget renders correctly with sample data 1`] = `
<div
  data-testid="Widget"
>
  <div
    data-testid="WidgetHeader"
  >
    Steam
  </div>
  <div
    data-testid="ProfileMetricsBadge"
  >
    [{"label":"Games Played","value":5}]
  </div>
  <div
    className="css-gavibk"
  >
    <h3
      className="css-1pgqsji"
    >
      My Games
    </h3>
  </div>
  <p
    className="css-1v9l0er"
  >
    Games I own and their play time statistics.
  </p>
  <div
    data-testid="OwnedGamesTable"
  >
    [{"id":"255710","displayName":"Cities: Skylines","playTimeForever":45441,"playTime2Weeks":120,"images":{"icon":"https://example.com/cities-icon.jpg"}},{"id":"346110","displayName":"ARK: Survival Evolved","playTimeForever":16670,"playTime2Weeks":null,"images":{"icon":"https://example.com/ark-icon.jpg"}}]
  </div>
  <div
    className="css-19lpcf0"
  >
    <h3
      className="css-1pgqsji"
    >
      Recently-Played Games
    </h3>
  </div>
  <p
    className="css-1v9l0er"
  >
    Games I've played in the last two weeks.
  </p>
  <div
    className="css-1bz685e"
  >
    <div
      data-testid="PostCard"
    >
      Half-Life
    </div>
    <div
      data-testid="PostCard"
    >
      Portal
    </div>
  </div>
</div>
`;

exports[`SteamWidget renders loading state 1`] = `
<div
  data-testid="Widget"
>
  <div
    data-testid="WidgetHeader"
  >
    Steam
  </div>
  <div
    data-testid="ProfileMetricsBadge"
  >
    []
  </div>
  <div
    className="css-gavibk"
  >
    <h3
      className="css-1pgqsji"
    >
      My Games
    </h3>
  </div>
  <p
    className="css-1v9l0er"
  >
    Games I own and their play time statistics.
  </p>
  <div
    data-testid="OwnedGamesTable"
  >
    []
  </div>
  <div
    className="css-19lpcf0"
  >
    <h3
      className="css-1pgqsji"
    >
      Recently-Played Games
    </h3>
  </div>
  <p
    className="css-1v9l0er"
  >
    Games I've played in the last two weeks.
  </p>
  <div
    className="css-1bz685e"
  />
</div>
`;

exports[`TimeSpent renders humanized time correctly 1`] = `"0 hours"`;
